force-app/main/default/objects/Account_Rating_Config__mdt/Account_Rating_Config__mdt.object-meta.xml
<CustomObject>
    <label>Account Rating Config</label>
    <pluralLabel>Account Rating Configs</pluralLabel>
</CustomObject>