force-app/main/default/objects/Account_Rating_Config__mdt/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <label>Account Industry</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>