force-app/main/default/objects/Account_Rating_Config__mdt/fields/Account_Rating__c.field-meta.xml
<CustomField>
    <fullName>Account_Rating__c</fullName>
    <label>Account Rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
                <default>true</default>
                <label>Hot</label>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>